--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "^3.0.2",
-    "twilio": "^3.77.3"
+    "twilio": "^3.77.3",
+    "osc": "2.4.1"
   }
 }
