--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "luxon": "^3.1.0",
     "morgan": "~1.9.1",
+    "osc": "2.4.1",
     "pug": "^3.0.2",
-    "twilio": "^3.77.3",
-    "osc": "2.4.1"
+    "twilio": "^3.77.3"
   }
 }
