--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "osc": "2.4.1",
     "pug": "^3.0.2",
     "twilio": "^3.77.3"
+  },
+  {
+    "type": "marstime",
+    "type": "marstimeapp"
   }
 }
